# demo_project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  project_setup.rst  pyproject.toml  setup.cfg
docs/source/: conf.py  demo_project.rst  index.rst  modules.rst
src/demo_project/: __init__.py  mod.py
tests/: test_demo_project.py
