[tool.poetry]
name = "demo_project"
version = "0.1.0a1"
description = "A demo project for demonstrating good structure and other best practices"
authors = ["Adam Huganir <adam@huganir.com>"]
repository = "https://github.com/adam-huganir/demo_project"
packages = [
    { include = "demo_project", from = "src", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.812"
isort = "^5.8.0"
pytest = "^6.2.4"
Sphinx = "^4.0.2"
pre-commit = "^2.13.0"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini]
addopts = "--strict-markers  --doctest-modules"
markers = ["slow"]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
